# implicit-decales-aziz

color-palettes/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md
color-palettes/cmake/: CMakeLists.txt  CheckSSE2.cmake  FindEigen3.cmake  FindFunctionnal.cmake  FindYAML.cmake  TemplateConfig.cmake.in
color-palettes/cmake/clis/: CMakeLists.txt
color-palettes/cmake/examples/: CMakeLists.txt
color-palettes/cmake/libs/: CMakeLists.txt
color-palettes/cmake/tests/: CMakeLists.txt
color-palettes/doc/: Doxyfile.in  architecture.dot  example1_basics.md  main.md
color-palettes/src/: pse.h  pse_allocator.c  pse_allocator.h  pse_api.h  pse_capacities.h  pse_cpspace.c  pse_cpspace_exploration.c  pse_cpspace_exploration_p.h  pse_cpspace_p.h  pse_cpspace_values.c  pse_cpspace_values_p.h  pse_device.c  pse_device_p.h  pse_drv.c  pse_drv.h  pse_logger.c  pse_logger.h  pse_platform.h  pse_ref_count.h  pse_slz.c  pse_slz.h  pse_slz_api.h  pse_slz_buffer.h  pse_slz_buffer_file.c  pse_slz_buffer_file.h  pse_slz_buffer_memory.c  pse_slz_buffer_memory.h  pse_slz_types.h  pse_types.h  stb_ds.h  stretchy_buffer.h
color-palettes/src/ColorSpace/: colorspace.cpp  colorspace.h
color-palettes/src/KdTree/: kdtree.h
color-palettes/src/cli/: pse_cli_space_color_exploration.c  pse_color_explore.cpp
color-palettes/src/clt/: pse_clt.c  pse_clt.h  pse_clt_api.h  pse_clt_cost.h  pse_clt_cost3.h  pse_clt_cost_L1.h  pse_clt_p.h  pse_clt_space_utils.c  pse_clt_space_utils.h
color-palettes/src/clt/space/color/: pse_color.c  pse_color.h  pse_color_api.h  pse_color_conversion_p.h  pse_color_conversion_tmpl.h  pse_color_cost.c  pse_color_cost.h  pse_color_cost_Cat02_LMS.c  pse_color_cost_Cat02_LMS.h  pse_color_cost_Cat02_LMS_p.h  pse_color_cost_HSV.c  pse_color_cost_HSV.h  pse_color_cost_HSV_p.h  pse_color_cost_Lab.c  pse_color_cost_Lab.h  pse_color_cost_Lab_p.h  pse_color_cost_RGB.c  pse_color_cost_RGB.h  pse_color_cost_RGB_p.h  pse_color_cost_XYZ.c  pse_color_cost_XYZ.h  pse_color_cost_XYZ_p.h  pse_color_cost_distance_tmpl.h  pse_color_cost_distance_utils.h  pse_color_cost_generic.c  pse_color_cost_generic.h  pse_color_cost_generic_p.h  pse_color_cost_p.h  pse_color_palette.c  pse_color_palette.h  pse_color_palette_constraints.c  pse_color_palette_constraints.h  pse_color_palette_constraints_p.h  pse_color_palette_exploration.c  pse_color_palette_exploration.h  pse_color_palette_p.h  pse_color_palette_variation_p.h  pse_color_space_Cat02_LMS.c  pse_color_space_Cat02_LMS.h  pse_color_space_HSV.c  (+12 more)
color-palettes/src/drv/eigen/: pse_eigen_api.h  pse_eigen_drv.c  pse_eigen_drv.h  pse_eigen_exploration.cpp  pse_eigen_exploration.h  pse_eigen_values.h
color-palettes/src/examples/: example1_basics.c
color-palettes/src/pse/: pse_common.hpp  pse_cost.hpp  pse_cost_generic.hpp  pse_cost_generic.inl  pse_cps.hpp  pse_cps.inl  pse_cps_types.hpp  pse_factory.hpp  pse_graph_types.hpp  pse_graph_utils.hpp  pse_graph_utils.inl  pse_levenberg_utils.hpp  pse_literal_string.hpp  pse_solver.hpp  pse_solver_exploration.hpp  pse_solver_exploration.inl  pse_solver_interpolation.hpp  pse_solver_interpolation.inl  pse_types.hpp  pse_uniform_grid.hpp
color-palettes/src/pse/color/: pse_color.hpp  pse_color_conversion.hpp  pse_color_gamut.hpp  pse_color_palette_processing.hpp  pse_color_palettized_raster.hpp  pse_color_palettizer.hpp  pse_color_spaces.hpp  pse_color_unscaling.hpp  pse_color_vision_deficiencies.hpp  pse_cost_color.hpp  pse_cost_color.inl  pse_cost_color_energy.hpp  pse_cost_color_energy.inl  pse_cost_color_label_map.hpp
color-palettes/src/pse/color/serialization/: pse_slz_color.hpp  pse_slz_cost_color.hpp  pse_slz_cost_color_energy.hpp
color-palettes/src/pse/hatching/: pse_hatching.hpp
color-palettes/src/pse/serialization/: pse_serializer.hpp  pse_serializer.inl  pse_serializer_yaml.hpp  pse_serializer_yaml.inl  pse_slz_cost.hpp  pse_slz_cost_generic.hpp  pse_slz_cps.hpp  pse_slz_types.hpp  pse_slz_utils.hpp
color-palettes/src/test/: test_pse_api.c  test_pse_api_exploration.c  test_pse_bezier.cpp  test_pse_clt_api.c  test_pse_clt_space_color_api.c  test_pse_color.cpp  test_pse_color_energy.cpp  test_pse_color_palettizer.cpp  test_pse_color_poly_interpolation.cpp  test_pse_color_problem.hpp  test_pse_color_problem.inl  test_pse_color_serialization.cpp  test_pse_color_solvers_perfs.cpp  test_pse_cps.cpp  test_pse_hatching.cpp  test_pse_levenberg.cpp  test_pse_literal_string.cpp  test_utils.h
implicit-decales-aziz/: .gitignore  CMakeLists.txt  README.md  main.cpp
implicit-decales-aziz/Decale/: DecaleDiskField2D.cpp  DecaleDiskField2D.h  DecaleRoundCornerSquareField2D.cpp  DecaleRoundCornerSquareField2D.h  DecaleScalarField2D.cpp  DecaleScalarField2D.h  DecaleSquareField2D.cpp  DecaleSquareField2D.h
implicit-decales-aziz/Deformer2D/: Deformer2D.cpp  Deformer2D.h
implicit-decales-aziz/GUI-Decale/: QWidgetMyDecale.cpp  QWidgetMyDecale.h  QWidgetMyWidget.cpp  QWidgetMyWidget.h
implicit-decales-aziz/Solver/: constraints.cpp  constraints.h  genericsolver.cpp  mydecalsolver.cpp  mydecalsolver.h
implicit-decales-aziz/Tools/: ColorImage.cpp  ColorImage.h
